# MDreport2

./: .gitignore  MDREP-FRONTEND-009_materials_pack.md  README.md  bootstrap.manifest.json  bootstrap.test.manifest.json  pyproject.toml
.work/CARD-MDREPORT-SSP-PERFORMANCE-FACTS-20260616/: brief.md  context_manifest.md  result.md  status.md
.work/CARD-MDREPORT-SSP-PERFORMANCE-FACTS-REVIEW-20260617/: brief.md  result.md  status.md
.work/MONTHLY-P4-A-REVIEW/: brief.md
.work/MONTHLY-P4-TEST-REVIEW/: brief.md
app/: bootstrap_init.py  main.py  ui_shell.py
config/: dsp_ad_format_size_map.json  dsp_classification_rules.json
deploy/: com.mattkuo.mdreport.codegraph-sync.plist  com.mattkuo.mdreport.daily-fetch.plist  com.mattkuo.mdreport.ui-shell.plist
docs/: RELEASE_SOP.md
domain/: contracts.py  services.py
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
infra/: dsp_api.py  dsp_rules.py  ssp_api.py
migrations/: 0001_initial.sql
scripts/: backfill_ssp_ad_group.py  codegraph_sync_on_change.sh  detect_missing_fetch_days.py  fetch_previous_day.sh  install_codegraph_sync_launchd.sh  install_daily_fetch_launchd.sh  install_ui_shell_launchd.sh  service_ops.sh  smoke_bootstrap.sh  start_lan.sh  sync_frontend_runtime_db.py  use_shared_runtime.sh
templates/: dsp_tab4_template.xlsx  dsp_tab4_template.xlsx.period.json  ssp_template.xlsx
tests/: test_app_shell_cli.py  test_bootstrap_init.py  test_dsp_api.py  test_monthly_p4.py  test_phase2_services.py  test_ssp_api.py  test_ui_shell.py
(+78 files in other folders)
