[project]
name = "mdrep-bootstrap"
version = "0.1.0"
description = "MDREP clean bootstrap skeleton"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1.0,<4",
  "playwright>=1.45.0,<2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["infra", "app"]
